[package]
name = "sputnikvm-ffi"
version = "0.0.0"
authors = ["Wei Tang <hi@that.world>"]

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
libc = "0.2"
etcommon-bigint = { version = "0.2", default-features = false, features = ["rlp"] }
sputnikvm = { version = "0.10" }
sputnikvm-network-classic = "0.10.0"
etcommon-block = "0.3"
etcommon-hexutil = "0.2"
clap = "2.22"